--- a/server/.env
+++ b/server/.env
@@ -10,3 +10,9 @@ CLOUDINARY_NAME=drxgsaylm
 CLOUDINARY_API_KEY=685162223579511
 CLOUDINARY_API_SECRET=1C2TAqJQuKFWbVXf-Cd1DSRnJHk
 
+
+EMAIL_USER=ayushkayush1@gmail.com
+EMAIL_PASS=domctzfwxytvonaq
+
+
+FRONTEND_URL=http://localhost:5173
