--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.3"
   },
